Register the cafes from .env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+RN_TEXTILE_CAFES="peerid1,peerid2,peerid3"
 RN_TEXTILE_CAFE_PIN_PATH="/a/pin/path"
 RN_TEMPORARY_REFERRAL="SOMETHING"
 RN_URL_SCHEME="textile-dev"
