--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@textile/go-mobile": "1.0.0-rc3",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
+    "protobufjs": "^6.8.8",
     "react": "16.5.0",
     "react-native": "0.57.2",
     "react-native-actionsheet": "^2.4.2",
