--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@textile/go-mobile": "1.0.0-rc3",
+    "buffer": "^5.2.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "protobufjs": "^6.8.8",
