--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 RN_TEXTILE_CAFES="peerid1,peerid2,peerid3"
+RN_TEXTILE_CAFE_URI="https://cafe.textile.io"
+RN_TEXTILE_CAFE_URI_PREFIX="https://"
 RN_TEXTILE_CAFE_PIN_PATH="/a/pin/path"
 RN_TEMPORARY_REFERRAL="SOMETHING"
 RN_URL_SCHEME="textile-dev"
