Cleaned up cafe related env vars

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 RN_TEXTILE_CAFES="peerid1,peerid2,peerid3"
-RN_TEXTILE_CAFE_URI="https://cafe.textile.io"
-RN_TEXTILE_CAFE_URI_PREFIX="https://"
-RN_TEXTILE_CAFE_PIN_PATH="/a/pin/path"
+RN_TEXTILE_CAFE_GATEWAY_URL="https://cafe.textile.io"
+RN_TEXTILE_CAFE_API_PREFIX="http://"
+RN_TEXTILE_CAFE_API_PIN_PATH="/a/pin/path"
 RN_TEMPORARY_REFERRAL="SOMETHING"
 RN_URL_SCHEME="textile-dev"
 RN_MAILCHIMP_API_URL="https://something.api.mailchimp.com"
