--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "tslint -c tslint.json --project ."
   },
   "dependencies": {
-    "@textile/go-mobile": "1.0.0-rc8",
+    "@textile/go-mobile": "^1.0.0-rc9",
     "buffer": "^5.2.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
