--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "dev": "run-p setup:cafe setup:daemon",
+    "setup:cafe": "textile daemon",
+    "setup:daemon": "react-native start --reset-cache",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "tsc": "tsc -p . --noEmit",
@@ -64,6 +67,7 @@
     "jest": "23.6.0",
     "jest-fetch-mock": "^1.6.6",
     "metro-react-native-babel-preset": "0.48.0",
+    "npm-run-all": "4.1.3",
     "react-dom": "^16.5.2",
     "react-test-renderer": "16.5.0",
     "reactotron-react-native": "^2.1.0",
