Waitlist signup screen

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ RN_URL_SCHEME="textile-dev"
 RN_MAILCHIMP_API_URL="https://something.api.mailchimp.com"
 RN_MAILCHIMP_API_KEY="a-key"
 RN_MAILCHIMP_LIST_ID="a-list-id"
+RN_MAILCHIMP_WAITLIST_ID="a-list-id"
