--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ RN_MAILCHIMP_API_URL="https://something.api.mailchimp.com"
 RN_MAILCHIMP_API_KEY="a-key"
 RN_MAILCHIMP_LIST_ID="a-list-id"
 RN_MAILCHIMP_WAITLIST_ID="a-list-id"
+RN_PEER_SWAP="https://<peer endpoint>"
+RN_RELEASE_TYPE="dev"
