--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,6 +173,7 @@ android {
 }
 
 dependencies {
+    compile project(':@textile_react-native-screen-control')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
