--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Textile'
+include ':@textile_react-native-screen-control'
+project(':@textile_react-native-screen-control').projectDir = new File(rootProject.projectDir, '../node_modules/@textile/react-native-screen-control/android')
 
 include ':app'
 include ':react-native-background-fetch'
