--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@textile/go-mobile": "1.0.0-rc26",
     "@textile/react-native-screen-control": "1.0.1",
+    "@textile/react-native-wait-for": "1.0.0",
+    "@textile/react-native-protobufs": "1.0.5",
     "buffer": "^5.2.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
