fixes import error on protobuf test

--- a/package.json
+++ b/package.json
@@ -102,6 +102,9 @@
     ],
     "setupFiles": [
       "./tests/setup.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!@textile/react-native-protobufs)/"
     ]
   }
 }
