--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -542,32 +542,32 @@ workflows:
     version: 2
     dev:
         jobs:
-            # - lint:
-            #     filters:
-            #         branches:
-            #             ignore:
-            #                 - master
-            # - tests:
-            #     filters:
-            #         branches:
-            #             ignore:
-            #                 - master
-            - android:
-                # requires:
-                #     - lint
-                #     - tests
+            - lint:
                 filters:
                     branches:
                         ignore:
                             - master
-            # - ios:
-            #     requires:
-            #         - lint
-            #         - tests
-            #     filters:
-            #         branches:
-            #             ignore:
-            #                 - master
+            - tests:
+                filters:
+                    branches:
+                        ignore:
+                            - master
+            - android:
+                requires:
+                    - lint
+                    - tests
+                filters:
+                    branches:
+                        ignore:
+                            - master
+            - ios:
+                requires:
+                    - lint
+                    - tests
+                filters:
+                    branches:
+                        ignore:
+                            - master
     adhoc:
         jobs:
             - ios-adhoc:
