--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,6 +172,10 @@ jobs:
             - restore_cache:
                 key: node-v1-{{ checksum "package.json" }}-{{ arch }}
 
+
+            - run: yes | sdkmanager --licenses || exit 0
+            - run: yes | sdkmanager --update || exit 0
+
             - run: yarn install
 
             - run:
