--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext {
+        buildToolsVersion = "28.0.3"
         minSdkVersion = 16
         compileSdkVersion = 27
         targetSdkVersion = 26
