--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ install-android-tools: &install-android-tools
         name: install android tools
         command: |
             sdkmanager --licenses
+            echo y | sdkmanager "build-tools;27.0.3"
+            echo y | sdkmanager "platforms;android-27"
             echo y | sdkmanager "build-tools;28.0.3"
             echo y | sdkmanager "platforms;android-28"
 
