--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,15 @@
 version: 2.1
+
+install-android-tools: &install-android-tools
+    run:
+        name: install android tools
+        command: |
+            sdkmanager --licenses
+            echo y | sdkmanager "build-tools;27.0.3"
+            echo y | sdkmanager "platforms;android-27"
+            echo y | sdkmanager "build-tools;28.0.3"
+            echo y | sdkmanager "platforms;android-28"
+
 jobs:
     lint:
         working_directory: ~/textile-mobile
@@ -130,14 +141,7 @@ jobs:
                 paths:
                     - vendor/bundle
 
-            - run:
-                  name: install tools
-                  command: |
-                      sdkmanager --licenses
-                      echo y | sdkmanager "build-tools;27.0.3"
-                      echo y | sdkmanager "platforms;android-27"
-                      echo y | sdkmanager "build-tools;28.0.3"
-                      echo y | sdkmanager "platforms;android-28"
+            - *install-android-tools
 
             - run:
                 name: fastlane tests
@@ -190,6 +194,8 @@ jobs:
             - run:
                 command: bundle install
 
+            - *install-android-tools
+
             - run:
                 command: bundle exec fastlane prep_release
 
@@ -222,7 +228,7 @@ jobs:
             LANG: en_US.UTF-8
         working_directory: ~/textile-mobile
         docker:
-            - image: circleci/android:api-26-node8-alpha
+            - image: circleci/android:api-28-node8-alpha
         resource_class: large
         steps:
             - checkout:
@@ -261,6 +267,8 @@ jobs:
             - run:
                 command: echo $ANDROID_KEYSTORE_BASE64 | base64 --decode >> $ANDROID_KEYSTORE
                 working_directory: android
+
+            - *install-android-tools
 
             - run:
                 command: bundle exec fastlane release
