updates to rc27 via master rebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,5 @@
     "skipLibCheck": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules", "coverage"],
-  "include": ["node_modules/@textile/react-native-sdk"]
+  "exclude": ["node_modules", "coverage"]
 }
