Update to react-navigation 3 and react-native-gesture-handler

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,7 @@ dependencies {
     compile project(':react-native-fabric')
     compile project(':react-native-background-timer')
     compile project(':react-native-version-number')
+    compile project(':react-native-gesture-handler')
     compile project(':textilego')
 }
 
