react-navigation upgrade (#874)
* Update to react-navigation 3 and react-native-gesture-handler

* Install react-native-screens

* Update for breaking react-navigation api changes

* remove outdated react-navigation types

* is-ignoring react-navigation import

* Revert "is-ignoring react-navigation import"

This reverts commit 7a9f508a23a255e7d5615a29f549e5977c40d671.

* Disable ts noImplicitAny for now

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -190,6 +190,8 @@ dependencies {
     compile project(':react-native-fabric')
     compile project(':react-native-background-timer')
     compile project(':react-native-version-number')
+    compile project(':react-native-gesture-handler')
+    compile project(':react-native-screens')
     compile project(':textilego')
 }
 
