--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "react-native-push-notification": "^3.1.1",
     "react-native-qrcode": "^0.2.7",
     "react-native-scalable-image": "^0.4.0",
+    "react-native-screens": "^1.0.0-alpha.22",
     "react-native-vector-icons": "6.1.0",
     "react-native-version-number": "https://github.com/textileio/react-native-version-number#6023fea24bc5865389fd938e99d8f86685543c4f",
-    "react-navigation": "^2.17.0",
+    "react-navigation": "^3.0.0",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
@@ -54,7 +55,6 @@
     "@types/react-native-push-notification": "^3.0.3",
     "@types/react-native-qrcode": "^0.2.2",
     "@types/react-native-vector-icons": "^4.6.4",
-    "@types/react-navigation": "^2.0.24",
     "@types/react-redux": "^6.0.9",
     "@types/react-test-renderer": "^16.0.3",
     "@types/uuid": "^3.4.4",
