--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@textile/react-native-icon": "^1.0.0",
+    "@textile/react-native-protobufs": "^1.1.0",
     "@textile/react-native-screen-control": "1.0.12",
     "@textile/react-native-sdk": "1.0.19",
     "@textile/redux-saga-wait-for": "1.0.1",
