--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,6 +178,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-contacts')
     compile project(':react-native-background-fetch')
     compile project(':react-native-push-notification')
     compile project(':react-native-background-upload')
