Move store link to .env

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ RN_MAILCHIMP_LIST_ID="a-list-id"
 RN_MAILCHIMP_WAITLIST_ID="a-list-id"
 RN_PEER_SWAP="https://<peer endpoint>"
 RN_RELEASE_TYPE="dev"
+RN_IOS_STORE_LINK="https://<ios store link>"
+RN_ANDROID_STORE_LINK="https://<android store link>"
