--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -552,17 +552,30 @@ workflows:
                     branches:
                         ignore:
                             - master
-            - ios-adhoc:
+            - android:
+                requires:
+                    - lint
+                    - tests
                 filters:
                     branches:
                         ignore:
                             - master
+            - ios:
                 requires:
                     - lint
                     - tests
-                context: textile-mobile-beta
+                filters:
+                    branches:
+                        ignore:
+                            - master
     adhoc:
         jobs:
+            - ios-adhoc:
+                context: textile-mobile-beta
+                filters:
+                    branches:
+                        only:
+                            - master
             - android-adhoc:
                 context: textile-mobile-beta
                 filters:
