--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+RN_TEXTILE_CAFE_TOKEN="a token"
 RN_TEXTILE_CAFE_OVERRIDE="optional-cafe-url"
 RN_TEXTILE_CAFE_GATEWAY_URL="https://cafe.textile.io"
 RN_TEXTILE_CAFE_API_PIN_PATH="/a/pin/path"
