--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.1.14",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/google-protobuf": "^3.2.7",
     "@types/jest": "^23.3.3",
     "@types/react": "^16.4.15",
     "@types/react-native": "^0.57.2",
