--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "tslint -c tslint.json --project ."
   },
   "dependencies": {
+    "@textile/react-native-camera-roll": "1.0.1",
     "@textile/react-native-icon": "^1.0.0",
     "@textile/react-native-sdk": "1.2.7",
     "@textile/redux-saga-wait-for": "1.0.1",
     "apisauce": "^1.0.2",
-    "@textile/react-native-camera-roll": "@textile/react-native-camera-roll",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.6.1",
