--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -29,4 +29,4 @@ include ':react-native-screens'
 project(':react-native-screens').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-screens/android')
 include ':react-native-contacts'
 project(':react-native-contacts').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-contacts/android')
-include ':textilego'
+include ':mobile'
