--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@textile/redux-saga-wait-for": "1.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.5.0",
-    "react-native": "0.57.2",
+    "react": "16.5.2",
+    "react-native": "0.57.7",
     "react-native-actionsheet": "^2.4.2",
     "react-native-background-fetch": "^2.4.3",
     "react-native-background-timer": "2.1.0-alpha.6",
@@ -64,7 +64,7 @@
     "jest-fetch-mock": "^1.6.6",
     "metro-react-native-babel-preset": "0.48.0",
     "react-dom": "^16.5.2",
-    "react-test-renderer": "16.5.0",
+    "react-test-renderer": "16.6.0-alpha.8af6728",
     "reactotron-react-native": "^2.1.0",
     "reactotron-redux": "^2.1.0",
     "reactotron-redux-saga": "^2.1.0",
