--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@textile/redux-saga-wait-for": "1.0.1",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.5.2",
+    "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-actionsheet": "^2.4.2",
     "react-native-background-fetch": "^2.4.3",
@@ -62,9 +62,9 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "jest": "23.6.0",
     "jest-fetch-mock": "^1.6.6",
-    "metro-react-native-babel-preset": "0.48.0",
+    "metro-react-native-babel-preset": "0.49.2",
     "react-dom": "^16.5.2",
-    "react-test-renderer": "16.6.0-alpha.8af6728",
+    "react-test-renderer": "16.6.1",
     "reactotron-react-native": "^2.1.0",
     "reactotron-redux": "^2.1.0",
     "reactotron-redux-saga": "^2.1.0",
