--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-elements": "1.0.0-beta7",
     "react-native-fabric": "https://github.com/corymsmith/react-native-fabric#523a4edab3b2bf55ea9eeea2cf0dde82c5c29dd4",
     "react-native-fs": "^2.11.17",
+    "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.27.1",
     "react-native-modal": "^6.5.0",
     "react-native-push-notification": "^3.1.1",
