WIP on depending on android-textile for mobile.aar

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,9 @@ allprojects {
         google()
         jcenter()
         maven {
+            url "https://dl.bintray.com/textile/maven"
+        }
+        maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
