--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/react-native-fs": "^2.8.2",
     "@types/react-native-push-notification": "^3.0.3",
     "@types/react-native-qrcode": "^0.2.2",
-    "@types/react-redux": "^6.0.9",
+    "@types/react-redux": "7.0.6",
     "@types/react-test-renderer": "^16.0.3",
     "@types/uuid": "^3.4.4",
     "babel-jest": "23.6.0",
