--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-native-version-number": "https://github.com/textileio/react-native-version-number#6023fea24bc5865389fd938e99d8f86685543c4f",
     "react-navigation": "^3.0.0",
     "react-navigation-header-buttons": "^2.1.0",
-    "react-redux": "^5.0.7",
+    "react-redux": "6.0.1",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.1",
@@ -55,7 +55,7 @@
     "@types/react-native-fs": "^2.8.2",
     "@types/react-native-push-notification": "^3.0.3",
     "@types/react-native-qrcode": "^0.2.2",
-    "@types/react-redux": "7.0.6",
+    "@types/react-redux": "6.0.14",
     "@types/react-test-renderer": "^16.0.3",
     "@types/uuid": "^3.4.4",
     "babel-jest": "23.6.0",
