--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@textile/react-native-icon": "^1.0.0",
     "@textile/react-native-sdk": "1.1.4",
     "@textile/redux-saga-wait-for": "1.0.1",
+    "apisauce": "^1.0.2",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.6.1",
