--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-elements": "1.0.0-beta7",
     "react-native-fabric": "https://github.com/corymsmith/react-native-fabric#523a4edab3b2bf55ea9eeea2cf0dde82c5c29dd4",
     "react-native-fs": "^2.11.17",
+    "react-native-gesture-handler": "^1.2.1",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.27.1",
     "react-native-modal": "^6.5.0",
@@ -34,6 +35,7 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-scalable-image": "^0.4.0",
     "react-native-version-number": "textileio/react-native-version-number",
+    "react-navigation": "^3.9.1",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "6.0.1",
     "redux": "^4.0.0",
