Use new mail list endpoint
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,8 @@ RN_TEXTILE_CAFE_API_PIN_PATH="/a/pin/path"
 RN_TEXTILE_CAMERA_ROLL_THREAD_KEY="a-unique-key"
 RN_TEMPORARY_REFERRAL="SOMETHING"
 RN_URL_SCHEME="textile-dev"
-RN_MAILCHIMP_API_URL="https://something.api.mailchimp.com"
-RN_MAILCHIMP_API_KEY="a-key"
-RN_MAILCHIMP_LIST_ID="a-list-id"
-RN_MAILCHIMP_WAITLIST_ID="a-list-id"
+RN_EMAIL_API_URL="https://some.api.com"
+RN_EMAIL_API_TOKEN="a-key"
 RN_RELEASE_TYPE="dev"
 RN_IOS_STORE_LINK="https://<ios store link>"
 RN_ANDROID_STORE_LINK="https://<android store link>"
