Enable file sharing
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/ios/Textile/Info.plist
+++ b/ios/Textile/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 	<key>NSContactsUsageDescription</key>
 	<string>Authorizing access to your contacts makes it easy for you to invite others to Textile. None of you contact data is saved or transmitted in any way.</string>
 	<key>CFBundleDevelopmentRegion</key>
