fix linting issues
paired with @asutula to resolve the linting issues

notable changes:

- deletes a file that was not used
- migrates email validation into a utility file
- eslint rule changes via package.json:eslintConfig.rules
  - default-case and no-string-refs are warnginf for now
  - no-undefined is ignored, as is beneficial for typescript

Signed-off-by: Benjamin Lupton <b@lupton.cc>

--- a/package.json
+++ b/package.json
@@ -121,6 +121,11 @@
       "ecmaFeatures": {
         "jsx": true
       }
+    },
+    "rules": {
+      "no-undefined": 0,
+      "default-case": 1,
+      "react/no-string-refs": 1
     }
   },
   "prettier": {
