Pods tweaks to get the new build system working
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,5 +38,13 @@ post_install do |installer|
     if target.name == "React"
       target.remove_from_project
     end
+    # per https://github.com/facebook/react-native/issues/20492
+    if target.name == 'yoga'
+      target.remove_from_project
+      target.build_configurations.each do |config|
+          config.build_settings['GCC_TREAT_WARNINGS_AS_ERRORS'] = 'NO'
+          config.build_settings['GCC_WARN_64_TO_32_BIT_CONVERSION'] = 'NO'
+      end
+    end
   end
 end
