Fix archiving of ipa
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -452,7 +452,7 @@ jobs:
                 path: ./ios/Textile.app.dSYM.zip
 
             - store_artifacts:
-                path: ./ios/TextilePhotos.ipa
+                path: ./ios/Textile.ipa
 
             - store_artifacts:
                 path: ./ios/sourcemap.js
