--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-jest": "24.7.1",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme": "^3.7.0",
+    "eslint-config-bevry": "^1.2.0",
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react-hooks": "^1.6.0",
@@ -112,6 +113,7 @@
   },
   "eslintConfig": {
     "extends": [
+      "bevry"
     ],
     "parserOptions": {
       "ecmaVersion": 6,
