remove minifying options [skip ci]
Signed-off-by: andrew <andrew@textile.io>

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,7 +113,7 @@ def enableSeparateBuildPerCPUArchitecture = true
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = true
+def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -148,7 +148,6 @@ android {
     }
     buildTypes {
         release {
-            shrinkResources true
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             if (file(System.getenv("ANDROID_KEYSTORE") ?: "keystore.jks").exists()) {
