--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Textile'
+include ':react-native-reanimated'
+project(':react-native-reanimated').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-reanimated/android')
 include ':@textile_react-native-camera-roll'
 project(':@textile_react-native-camera-roll').projectDir = new File(rootProject.projectDir, '../node_modules/@textile/react-native-camera-roll/android')
 
