--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'Textile' do
 
   # your other libraries will follow here!
   pod 'textile-react-native-sdk', :path => '../node_modules/@textile/react-native-sdk'
+  pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
+
 end
 
 # The following is needed to ensure the "archive" step works in XCode.
