--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 27
         supportLibVersion = "28.0.0"
+		googlePlayServicesVersion = "16.1.0"
+		firebaseVersion = "18.0.0"
     }
     repositories {
         google()
