--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
+ // Currently not used!
 def enableSeparateBuildPerCPUArchitecture = true
 
 /**
@@ -133,7 +134,7 @@ android {
     splits {
         abi {
             reset()
-            enable enableSeparateBuildPerCPUArchitecture
+            enable gradle.startParameter.taskNames.contains("assembleRelease")
             universalApk false  // If true, also generate a universal APK
             include "armeabi-v7a", "arm64-v8a"
         }
