--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -169,6 +169,10 @@ android {
             }
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
