--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-RN_TEXTILE_LB_URL="optional-lb-url"
-RN_TEXTILE_CAFE_URL="optional-cafe-url"
-RN_TEXTILE_CAFE_TOKEN="a token"
+RN_TEXTILE_CAFES_JSON="base64 encoded Cafe[] JSON"
 RN_TEXTILE_CAFE_API_PIN_PATH="/a/pin/path"
 RN_TEXTILE_GATEWAY_URL="https://cafe.textile.io"
 RN_TEXTILE_CAMERA_ROLL_THREAD_KEY="a-unique-key"
