--- a/package.json
+++ b/package.json
@@ -126,7 +126,14 @@
     "rules": {
       "no-undefined": 0,
       "default-case": 0,
-      "react/no-string-refs": 1
+      "react/no-string-refs": 1,
+      "func-style": [
+        "error",
+        "declaration",
+        {
+          "allowArrowFunctions": true
+        }
+      ]
     }
   },
   "prettier": {
