--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.28.1",
     "react-native-modal": "^6.5.0",
-    "react-native-progress-circle": "^2.0.1",
+    "react-native-progress": "^3.6.0",
     "react-native-push-notification": "^3.1.1",
     "react-native-qrcode": "^0.2.7",
     "react-native-reanimated": "1.0.1",
