Disable eslint no-sync rule because it conflicts with lots of our naming
Signed-off-by: Aaron Sutula <hi@asutula.com>

--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
       }
     },
     "rules": {
+      "no-sync": 0,
       "no-undefined": 0,
       "default-case": 0,
       "react/no-string-refs": 1,
