--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-easy-toast": "1.2.0",
     "react-native-elements": "1.0.0-beta7",
     "react-native-fabric": "https://github.com/corymsmith/react-native-fabric#523a4edab3b2bf55ea9eeea2cf0dde82c5c29dd4",
+    "react-native-firebase": "~5.5.6",
     "react-native-fs": "^2.11.17",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-hyperlink": "0.0.14",
