--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -357,6 +357,9 @@ jobs:
             - vendor/bundle
 
       - run:
+          command: bundle exec fastlane download_config
+
+      - run:
           command: bundle exec fastlane test
           working_directory: ios
 
